--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <p class="fs-5 fw-bold text-primary">Why Choosing Us!</p>
                     <h1 class="display-5 mb-4">Few Reasons Why People Choosing Us!</h1>
                     <p class="mb-4">We provide quality product with an attracting price than the existing market. We have a specelised and a dedicated team members who are really effective. Apart from that we have a system genereted return system which are checked by the employees in every minutes.</p>
-                    <a class="btn btn-primary py-3 px-4" href="https://gallerysports.shop/testimonial.html">Explore More</a>
+                    <a class="btn btn-primary py-3 px-4" href="https://gallerysports.shop/">Explore More</a>
                 </div>
                 <div class="col-lg-6">
                     <div class="row g-4 align-items-center">
