--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <h1 class="m-0">Gallery Sports</h1>
-        </a>        
+        </a>
     </nav>
     <!-- Navbar End -->
 
@@ -253,9 +253,11 @@
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href="" hidden><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
+                <a href="https://gallerysportsshop.github.io/admin/" style="text-align: right; color: white;" ><i class="fa fa-sign-out-alt"></i> Sign Out</a>
             </div>
         </div>
     </div>
+    
     <!-- Footer End -->
 
     <!-- Copyright Start -->
